# doku_gpt

./: .gitignore  LICENSE  README.md  clear_chache  pyproject.toml
data/fake_doku/.secret/: start.txt
data/fake_doku/one/: else.txt  end.txt  start.txt
data/fake_doku/two/: end.txt  start.txt
src/doku_gpt/: abstact_root_folder.py  cli.py  functions.py
src/doku_gpt/adapter/: page_adapter.py
src/doku_gpt/command/: abstract_finder_command.py  compile_all_command.py  compile_doku_command.py  compile_markdown_command.py  create_settings_command.py  list_files_command.py  list_folders_command.py  sanitize_namespace_command.py  update_settings_command.py
src/doku_gpt/compiler/: doku_compiler.py  gpt_compiler.py  index_compiler.py  markdown_compiler.py  markdown_to_jsonl_compiler.py  namespace_compiler.py
src/doku_gpt/enum/: abstract_enum.py  link_status.py  link_type.py  valid_file.py  valid_file_enum.py
src/doku_gpt/enums/: link_status.py  link_type.py  namespace_type.py  square_brackets.py
src/doku_gpt/error/: invalid_interwiki_error.py  invalid_json_error.py  invalid_namespace_error.py  invalid_parameter_error.py  invalid_path_error.py  invalid_value_error.py
src/doku_gpt/extractor/: doku_page_extractor.py  web_page_extractor.py
src/doku_gpt/factory/: link_tag_factory.py
src/doku_gpt/finder/: copier.py  finder.py
src/doku_gpt/handler/: prepare_doku_handler.py
src/doku_gpt/helper/: debug_helper.py  file_system_helper.py  finder_helper.py  link_tag_helper.py  (+1 more)
tests/doku_gpt/: abstract_fake_doku_test.py
tests/unit/: abstract_fake_doku_test.py
(+150 files in other folders)
